# example_gtest

./: .gitignore  CMakeLists.txt  README.md  project.root
deploy/cmake/: CMakeBit.cmake  CMakeCRT.cmake  CMakeKeys.cmake  CMakePath.cmake  gcc.cmake  msvc.cmake
deploy/gcc/: build_gtest-d.sh  build_gtest.sh  build_once-d.sh  build_once.sh  build_project-d.sh  build_project.sh
deploy/mingw/: build_gtest.bat  build_once.bat  build_project-d.bat  build_project.bat  path.bat
deploy/msvc/: build_gtest-d.bat  build_gtest.bat  build_once.bat  build_project.bat
deploy/stash/linux/: calcRebase.sh  docs.view.sh  git-commit.sh  parse_version_cpp.sh  parse_version_md.sh  staff.sh
deploy/stash/windows/: 7zrun.bat  [vbs]-replace.bat  actualize-d.bat  actualize.bat  calcRebase.bat  docs.view.bat  git-branch.bat  git-clean.bat  git-commits.bat  git-date.bat  git-rebase.bat
deploy/stash/windows/cmd/: garbage.7z  readme.md
deploy/stash/windows/vbs/: offset.vbs
docs/: changelog.md  chrono.md  docs.md  history.md
docs/docs/: build.md  classic.md  fixture.md  mock.md  stash.md
docs/docs/stash/: 7zrun.md  actualize.md  calcrebase.md  docs.view.md  git-branch.md  git-clean.md  git-commits.md  git-date.md  replace.md
docs/other/: calendar.md  problem.md
docs/tasks/: 2025-12-02-0001-rep-first.md  2025-12-02-0002-dev-frame.md  2025-12-04-0003-dev-sample.md  2025-12-06-0004-dev-stash.md  2025-12-07-0005-dev-stash.md
sample.exe/: CMakeLists.txt
sample.exe/include/: sample.ver
sample.exe/sources/: main.cpp
sample.lib/: CMakeLists.txt
sample.lib/include/sample/: sample.hpp  sample.ver
sample.lib/sources/: sample.cpp
tests/: CMakeLists.txt  main.cpp  tests.ver
tests/classic/: test-classic.cpp  test-fixture.cpp  test-pred.cpp  test-sample.cpp  test-trace.cpp
tests/mock/: test-array.cpp  test-const-ptr.cpp  test-const-ref.cpp  test-fake1.cpp  test-matcher.cpp  test-mock1.cpp  test-mock2.cpp  test-mock3.cpp
tests/turtle/: test-turtle-example.cpp  test-turtle-general.cpp  test-turtle-sequences.cpp  test-turtle-sticky.cpp  test-turtle.hpp
